--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
         <meta charset="UTF-8">
         <meta name="keywords" content="umagos, app, file, converter, free, unlimited, convenient, png, jpg, pdf, doc">
         <meta name="description" content="umagos will be a free and unlimited file conversion and general utility app to boost your productivity! All the tools you need, conveniently packed in a place you can always reach.">
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-HG98PN0MM3"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-HG98PN0MM3');
+        </script>
+        
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
             @import url('fonts/Inter/inter.css');
