fixed the fonts

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             h1:not(.display) {
                 font-family: Kollektif;
                 font-style: normal;
-                font-weight: normal;
+                font-weight: 400;
                 font-size: 60px;
                 line-height: 60px;
                 color: #0A2E45;
