--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta name="description" content="umagos will be a free and unlimited file conversion and general utility app to boost your productivity! All the tools you need, conveniently packed in a place you can always reach.">
         
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
             @import url('fonts/Inter/inter.css');
             @import url('fonts/kollektif/kollektif.css');
+            @import url('fonts/Quicksand/quicksand.css');
 
             html, body{
                 background-color: #FEFBFA;
