added link to my discord server

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <article>
             <h1>Website under construction.</h1>
             <p><br></p>
-            <p>Hello! Thanks for visiting the site! The software's not done yet, please check back later. In the meantime, you can watch my progress on the app and give feedback at <a href="https://twitter.com/eramne2">my twitter</a> or <a href="https://github.com/eramne">my github.</a></p>
+            <p>Hello! Thanks for visiting the site! The software's not done yet, please check back later. In the meantime, you can watch my progress on the app and give feedback at <a href="https://discord.gg/kJ5zKRtUar">my discord server</a>, <a href="https://twitter.com/eramne2">my twitter</a>, or <a href="https://github.com/eramne">my github.</a></p>
         </article>
     </body>
 </html>
